--- a/k8s/manifests/other-cases/hostpath-pv.yaml
+++ b/k8s/manifests/other-cases/hostpath-pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: manual 
   capacity:
     storage: 2Gi
   accessModes:
@@ -19,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: hostpath-pvc
+  namespace: frontend
 spec:
   storageClassName: manual
   accessModes:
